[project]
name = "vector-sqlite"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.10.0",
    "fastembed>=0.6.1",
    "pillow>=11.2.1",
    "pydantic>=2.11.3",
    "sentence-transformers>=4.1.0",
    "termcolor>=3.0.1",
    "numpy>=1.24.0",
    "onnxruntime>=1.15.0",
]
